# nano-opd

./: .gitignore  CLAUDE.md  Makefile  README.md  dev.ipynb  pyproject.toml
.claude/skills/code-structure/: SKILL.md
.claude/skills/simplicity-first/: SKILL.md
nanoopd/: eval_aime.py  eval_livecodebench.py  eval_sciknoweval.py  loss.py  rollout.py  rollout_worker.py  train.py  train.sh  train_opd.py  train_opd.sh  train_sdpo.py  train_sdpo.sh
nanoopd/data/: base.py  dapo.py  dapo_dataset.py  dataset.py  livecodebench.py  sciknoweval.py  test.py
nanoopd/fsdp/: algorithms.py  base.py  data_parallelism.py  model.py  model_tp.py  tensor_parallelism.py
opd/: loss.py  metrics.py  results.md
opd/apo-opd/: app.py  clair_logprobs.py  rubric_extractor.py
opd/envs/: base.py  code_execution.py  code_executor_server.py  dapo_dataset.py  dataset.py  dataset_smoke_check.py  livecodebench.py  opsd_dataset.py  sciknoweval.py  sdft_science.py  sdft_tooluse.py  test_dataset.py
opd/eval/: eval_aime_2025.py  eval_math.py
opd/examples/: opd.yaml  opsd.yaml  run_all.sh  sdft.yaml  sdpo.yaml  train.sh  train_opd.sh  train_opsd.sh  train_sdft.sh  train_sdpo.sh
opd/fsdp/: algorithms.py  base.py  data_parallelism.py  model.py
opd/generator/: rollout.py  rollout_worker.py
opd/trainer/: distillation_utils.py  logging_utils.py  models.py  opd.py  self_distillation_utils.py  setup_utils.py  sync_teacher.py  train_opd.py  train_opsd.py  train_sdft.py  train_sdpo.py  trainer_utils.py
